@@ -1,6 +1,7 @@
 package client.scenes;
 
-import client.utils.ConfigUtils;
+import client.utils.Config;
+import client.utils.LanguageUtils;
 import client.utils.ServerUtils;
 import com.google.inject.Inject;
 import commons.BankAccount;
@@ -8,7 +9,10 @@ import commons.Debt;
 import commons.Event;
 import commons.Participant;
 import commons.primary_keys.DebtPK;
+import javafx.beans.property.SimpleStringProperty;
+import javafx.beans.property.StringProperty;
 import javafx.fxml.FXML;
+import javafx.fxml.Initializable;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.control.Button;
@@ -20,16 +24,15 @@ import javafx.scene.layout.VBox;
 import javafx.scene.text.Font;
 import javafx.scene.text.Text;
 import javafx.scene.text.TextFlow;
+import java.net.URL;
+import java.util.*;
 
-import java.io.File;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-
-public class DebtsCtrl {
+public class DebtsCtrl implements Initializable {
+    private Config config;
     private final ServerUtils server;
     private final MainCtrl mainCtrl;
+
+    private final LanguageUtils languageUtils;
     private static final double DEBT_AMOUNT = 100;
     private static final double IMAGE_SIZE = 20;
     private static final double BORDER_PANE_MARGIN = 10;
@@ -43,10 +46,21 @@ public class DebtsCtrl {
     private VBox debtsList;
     private Event event;
 
+    private StringProperty settleButton;
+    private StringProperty remindButton;
+    private StringProperty owesLabel;
+    private StringProperty toLabel;
+
     @Inject
-    public DebtsCtrl(ServerUtils server, MainCtrl mainCtrl) {
+    public DebtsCtrl(ServerUtils server, MainCtrl mainCtrl, Config config, LanguageUtils languageUtils) {
         this.mainCtrl = mainCtrl;
         this.server = server;
+        this.config = config;
+        this.languageUtils = languageUtils;
+        this.owesLabel = new SimpleStringProperty();
+        this.settleButton = new SimpleStringProperty();
+        this.remindButton = new SimpleStringProperty();
+        this.toLabel = new SimpleStringProperty();
     }
 
     public void refresh() {
@@ -59,7 +73,8 @@ public class DebtsCtrl {
         debtsList.getChildren().addAll(collection);
 
         // TODO add event name to title of the page
-        title.setText("Open Debts - " + debts.getFirst().getEvent().getName());
+        // TODO: Fix string binding
+        title.setText("Open Debts - " + debts.get(0).getEvent().getName());
 
     }
 
@@ -81,16 +96,20 @@ public class DebtsCtrl {
         Text payer = new Text(debt.getPayer().getNickname());
         debtor.setFont(ARIAL_BOLD);
         payer.setFont(ARIAL_BOLD);
-        content.getChildren().addAll(debtor, new Text(" owes "), amount, new Text(" to "), payer);
+        Text owes = new Text();
+        owes.textProperty().bind(owesLabel);
+        Text to = new Text();
+        to.textProperty().bind(toLabel);
+        content.getChildren().addAll(debtor, owes, amount, to, payer);
         description.getChildren().addAll(content);
         BorderPane.setMargin(description, new Insets(BORDER_PANE_MARGIN, BORDER_PANE_MARGIN, BORDER_PANE_MARGIN, BORDER_PANE_MARGIN));
 
         // Buttons on the right side
         HBox buttons = new HBox();
         Button reminder = new Button();
-        reminder.setText("Remind");
+        reminder.textProperty().bind(remindButton);
         Button settled = new Button();
-        settled.setText("Settle");
+        settled.textProperty().bind(settleButton);
         buttons.getChildren().addAll(reminder, settled);
         HBox.setMargin(settled, new Insets(FLOW_PANE_MARGIN, FLOW_PANE_MARGIN, FLOW_PANE_MARGIN, 0));
         HBox.setMargin(reminder, new Insets(FLOW_PANE_MARGIN, FLOW_PANE_MARGIN, FLOW_PANE_MARGIN, 0));
@@ -129,18 +148,6 @@ public class DebtsCtrl {
         mainCtrl.showOverview();
     }
 
-    public void switchToEnglish() {
-        Map<String, String> textMap = ConfigUtils.readLanguage(new File("client/src/main/resources/config/debtsEnglish.csv"));
-        title.setText(textMap.get("openDebts"));
-        returnButton.setText(textMap.get("returnToOverview"));
-    }
-
-    public void switchToDutch() {
-        Map<String, String> textMap = ConfigUtils.readLanguage(new File("client/src/main/resources/config/debtsDutch.csv"));
-        title.setText(textMap.get("openDebts"));
-        returnButton.setText(textMap.get("returnToOverview"));
-    }
-
     public List<Debt> mockData() {
         Event event = new Event("New Year Party");
         BankAccount b1 = new BankAccount("myIBAN1", "myBIC1");
@@ -177,4 +184,24 @@ public class DebtsCtrl {
         }
     }
 
+    @Override
+    public void initialize(URL url, ResourceBundle resourceBundle) {
+        this.owesLabel.bind(languageUtils.getBinding("debts.owesLabel"));
+        this.remindButton.bind(languageUtils.getBinding("debts.remindBtn"));
+        this.settleButton.bind(languageUtils.getBinding("debts.settleBtn"));
+        this.toLabel.bind(languageUtils.getBinding("debts.toLabel"));
+        this.title.textProperty().bind(languageUtils.getBinding("debts.openDebtsLabel"));
+        this.returnButton.textProperty().bind(languageUtils.getBinding("debts.returnToOverviewBtn"));
+        switch (config.getLocale().getLanguage()) {
+            case "nl":
+                languageUtils.setLang("nl");
+                break;
+            case "en":
+                languageUtils.setLang("en");
+                break;
+            default:
+                languageUtils.setLang("en");
+                break;
+        }
+    }
 }
